carousel z-index fix

--- a/src/app/Home/components/index.css
+++ b/src/app/Home/components/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   text-align: center;
   width: 100%;
-  z-index: 0;
+  z-index: 1;
 }
 
 .carousel .control-dots .dot {
